--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@ Assignments
             <p><a href=https://github.com/reallyrj/Assignment-15>Code Repo</a></p>
             <p><a href=https://assignment-15-gp4m.onrender.com>Live Demo</a></p>
         </section>
+        <section>
+            <h2>Assignment 17-edit and delete</h2>
+            <img src="images/ss17.png">
+            <p><a href=https://github.com/reallyrj/Assignment-15>Code Repo</a></p>
+            <p><a href=https://assignment-17-p097.onrender.com>Live Demo</a></p>
+        </section>
 </div> 
 <div id="center">
 <h2>Projects</h2>
