--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@ Assignments
             <p><a href=https://github.com/reallyrj/Assignment-15>Code Repo</a></p>
             <p><a href=https://assignment-17-p097.onrender.com>Live Demo</a></p>
         </section>
+        <section>
+            <h2>Assignment 18-Crud with mongodb</h2>
+            <img src="images/ss18.png">
+            <p><a href=https://github.com/reallyrj/Assignment-18>Code Repo</a></p>
+            <p><a href=https://assignment-18.onrender.com>Live Demo</a></p>
+        </section>
 </div> 
 <div id="center">
 <h2>Projects</h2>
