--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -17,13 +17,13 @@
             <div></div>
         </div>
         <ul id="nav-items" class="flex-container hide">
-            <a href="index.html"><li job="nav">Home</li></a>
+            <a href="/"><li job="nav">Home</li></a>
             <a href="drops.html"><li>Drops</li></a>
             <a href="artist.html"><li>Upcoming Artist</li></a>
             <a href="favorites.html"><li>Favorites</li></a>
             <a href="news.html"><li>News</li></a>
             <a href="contact.html"><li>Contact Us</li></a>
-            <a href="submissions.html"><li>Submissions</li></a>
+            <a href="//"><li>Submissions</li></a>
         </ul>
     </nav>
 
