--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@ Assignments
         <h2>Project-Part 6</h2>
         <a href="projects/part6/index.html"><img src="images/proj6.png"/></a>
     </section>
+    <section>
+        <h2>Project-Part 7</h2>
+        <img src="images/proj7.png">
+        <p><a href=https://github.com/reallyrj/reallyrj.github.io>Code Repo</a></p>
+        <p><a href=https://reallyrj-github-io.onrender.com>Live Demo</a></p>
+    </section>
 </div>
 </div>
 </div>
